--- a/static/styles/stylesheet.css
+++ b/static/styles/stylesheet.css
@@ -187,21 +187,21 @@ footer{
 	margin-top: 0;
 }
 
-.sh_linenum,
-.sh_javascript{
+.sh_wrapper .sh_linenum,
+.sh_wrapper .sh_javascript{
 	font: normal 15px/18px Consolas, Nitti;
 	float: left;
 	display: inline;
 	margin: 0 !important;
-	padding: 20px 0px !important;
+	padding: 20px 10px !important;
 }
 
 .sh_wrapper .sh_javascript{padding-left: 10px !important; text-align: left;}
-.sh_linenum{padding-right: 5px !important; text-align: right; border: solid 1px skyblue; border-width: 0px 1px 0px 0px; background: #EDF3FE; }
+.sh_wrapper .sh_linenum{padding-right: 5px !important;text-align: right; border: solid 1px skyblue; border-width: 0px 1px 0px 0px; background: #EDF3FE; }
 
 .sh_wrapper{text-align: center; margin-top: 10px;}
 
-.sh_inner{
+.sh_wrapper .sh_inner{
 	border: solid 1px #ececec;
 	background: white;
 	box-shadow: 7px 7px 10px #888;
