--- a/tmpl/tree.tmpl
+++ b/tmpl/tree.tmpl
@@ -1,5 +1,5 @@
 var tree = [
-	["Global", "namespaces.html", "", [
+	["Global", "global.html", "", [
 		<?js 
 			docs.forEach(function(doc, i) {
 				print(render('tree_leaf.tmpl', doc));
