--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
   <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
-  <title>Package API</title>
+  <title><?js print(info['package'] ? info['package'].name + ' API' : 'API');?></title>
 </head>
 <frameset cols="25%,75%" frameborder="1" border="1" bordercolor="#bbb" framespacing="1">
   <frame src="panel.html" name="index">
