--- a/tmpl/interface.tmpl
+++ b/tmpl/interface.tmpl
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
-		<title>jWire API</title>
+		<title><?js print(info['package'] ? info['package'].name + ' Documentation' : 'Documentation');?></title>
 	</head>
 	<body id="overview">
 
