--- a/tmpl/namespace.tmpl
+++ b/tmpl/namespace.tmpl
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
-		<title>jWire API</title>
+		<title><?js print(info['package'] ? info['package'].name + ' Documentation' : 'Documentation');?></title>
 	</head>
 	<body id="class">
 
@@ -149,7 +149,7 @@
 				Events
 				<small><a href="#">Top</a></small>
 			</h2>
-			<?js print(render('methods.tmpl', {methods: docs.events, parentName: docs.longname})); ?>
+			<?js print(render('events.tmpl', {events: docs.events, parentName: docs.longname})); ?>
 			<?js } ?>
 
 			<!--
@@ -188,8 +188,8 @@
 				Events Detail
 				<small><a href="#">Top</a></small>
 			</h2>
-			<?js docs.events.forEach(function(method) {
-			print(render('method.tmpl', method));
+			<?js docs.events.forEach(function(event) {
+			print(render('event.tmpl', event));
 			}); ?>
 			<?js } ?>
 
