--- a/tmpl/panel.tmpl
+++ b/tmpl/panel.tmpl
@@ -6,6 +6,9 @@
 
 		<title><?js print((info['package'] ? info['package'].name + ' ' : '') + 'API'); ?></title>
 
+                <script type="text/javascript" src="js/shCore.js"></script>
+                <script type="text/javascript" src="js/shBrushJScript.js"></script>
+
 		<script type="text/javascript" src="tree.js"></script>
 		<script type="text/javascript" src="searchdata.js"></script>
 		<script type="text/javascript" src="js/jquery-1.3.2.min.js"></script>
