Put parameter on SyntaxHighligther (lineno-anchors) and do not put content in anchor tag.

--- a/tmpl/file.tmpl
+++ b/tmpl/file.tmpl
@@ -23,7 +23,7 @@
 		</header>
 
 		<div class="content">
-			<pre class="brush: js"><?js print(htmlsafe(docs.code)); ?></pre>
+			<pre class="brush: js; lineno-anchors : true"><?js print(htmlsafe(docs.code)); ?></pre>
 		</div>
 
 		<?js print(render('footer.tmpl', this)); ?>
