Added charset= utf8 everywhere... there was one in files, but for total portability, should probably use env.encoding or something. Would need a non-utf8 system to test, I guess. Also, removed two script tags that was dead code for my experiments with syntax highlighting.

--- a/tmpl/class.tmpl
+++ b/tmpl/class.tmpl
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+                <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
                 <link rel="stylesheet" type="text/css" href="styles/shCore.css">
                 <link rel="stylesheet" type="text/css" href="styles/shThemeDefault.css">
