--- a/tmpl/namespace.tmpl
+++ b/tmpl/namespace.tmpl
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+                <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
                 <link rel="stylesheet" type="text/css" href="styles/shCore.css">
                 <link rel="stylesheet" type="text/css" href="styles/shThemeDefault.css">
