--- a/static/styles/stylesheet.css
+++ b/static/styles/stylesheet.css
@@ -119,6 +119,15 @@ td small { font-size:85%; white-space:nowrap; }
         color: #950B02;
 }
 
+/* name is partially used for member names */
+.name 
+{
+        font-weight: bold;
+}
+
+/* summary is partially used for summaries of methods */
+.summary {}
+
 
 /* code */
 pre, .example { background-color:transparent; font-family:Menlo,Monaco,"Courier New",monospace; line-height:1.5; margin:1.5em 0; overflow:aMenlo,Monaco,"Courier New",monospaceing:6px 10px 6px 20px; white-space:pre; }
