Added option to have a mainfile for all projects.
Current JSDoc3 supports handing a README.md (anything README or ending
in .md actually) to it, and uses this as the mainpage.

This patch adds behaviour that mimics this.

Only tested for the positive case, e.g. not tested without mainpage,
sorry about that.

--- a/tmpl/header.tmpl
+++ b/tmpl/header.tmpl
@@ -49,6 +49,9 @@ $(document).ready(function(){
 </script>
 
 <ul>
+	<?js if(this.info['mainpage']) { ?>
+	<li><a href="mainpage.html">Home</a></li>
+	<?js } ?>
 	<?js if(this.info['class']) { ?>
 	<li><a href="class_index.html">Classes</a></li>
 	<?js } ?>
