Enable shorter file names following recent changes in jsdoc3
It seems jsdoc3 began using full/absolute paths for filenames
recently, which broke sourceBaseDir ability to shorten the paths.
This commit fixes this. It is probably broken for Windows.

--- a/tmpl/file_index.tmpl
+++ b/tmpl/file_index.tmpl
@@ -21,7 +21,7 @@
 					<?js if(docs.hasOwnProperty(filename)) { ?>
 					<tr>
 						<td>
-							<?js= linkto('file:' + docs[filename].cpath, filename) ?>
+							<?js= linkto('file:' + docs[filename].cpath, docs[filename].visibleFilename) ?>
 						</td>
 						<td>
 							<?js= docs[filename].description ?>
