RMV: Removed fires and listen for de methods summarys. it's mantain in method detail.

--- a/tmpl/methods.tmpl
+++ b/tmpl/methods.tmpl
@@ -4,8 +4,8 @@
     <?js 
 		var Options = {
 			showParent: false,
-			showListen: true,
-			showFires: true
+			showListen: false,
+			showFires: false
 		};
 		if(typeof(this.showParent) !== 'undefined'){
 			Options.showParent = this.showParent ? true : false;
